src/bootstrap/src/core/builder/selectors/snapshots/x_test_rustdoc.snap
---
source: src/bootstrap/src/core/builder/selectors/tests.rs
expression: test rustdoc
---
[Test] test::CrateRustdoc
    targets: [x86_64-unknown-linux-gnu]
    - Set({test::src/tools/rustdoc})
[Test] test::RustdocBook
    targets: [x86_64-unknown-linux-gnu]
    - Set({test::src/doc/rustdoc})
