src/bootstrap/src/core/builder/selectors/snapshots/x_test_skip_coverage.snap
---
source: src/bootstrap/src/core/builder/selectors/tests.rs
expression: test --skip=coverage
---
[Test] test::Tidy
    targets: [x86_64-unknown-linux-gnu]
    - Set({test::src/tools/tidy})
[Test] test::Ui
    targets: [aarch64-unknown-linux-gnu]
    - TestSuite(test::tests/ui)
[Test] test::Crashes
    targets: [aarch64-unknown-linux-gnu]
    - TestSuite(test::tests/crashes)
[Test] test::Coverage
    targets: [aarch64-unknown-linux-gnu]
    - Set({test::coverage-map})
    - Set({test::coverage-run})
[Test] test::MirOpt
    targets: [aarch64-unknown-linux-gnu]
    - TestSuite(test::tests/mir-opt)
[Test] test::CodegenLlvm
    targets: [aarch64-unknown-linux-gnu]
    - TestSuite(test::tests/codegen-llvm)
[Test] test::CodegenUnits
    targets: [aarch64-unknown-linux-gnu]
    - TestSuite(test::tests/codegen-units)
[Test] test::AssemblyLlvm
    targets: [aarch64-unknown-linux-gnu]
    - TestSuite(test::tests/assembly-llvm)
[Test] test::Incremental
    targets: [aarch64-unknown-linux-gnu]
    - TestSuite(test::tests/incremental)
[Test] test::Debuginfo
    targets: [aarch64-unknown-linux-gnu]
    - TestSuite(test::tests/debuginfo)
[Test] test::UiFullDeps
    targets: [x86_64-unknown-linux-gnu]
    - TestSuite(test::tests/ui-fulldeps)
[Test] test::RustdocHtml
    targets: [x86_64-unknown-linux-gnu]
    - TestSuite(test::tests/rustdoc-html)
[Test] test::CoverageRunRustdoc
    targets: [x86_64-unknown-linux-gnu]
    - TestSuite(test::tests/coverage-run-rustdoc)
[Test] test::Pretty
    targets: [x86_64-unknown-linux-gnu]
    - TestSuite(test::tests/pretty)
[Test] test::CodegenCranelift
    targets: [x86_64-unknown-linux-gnu]
    - Set({test::compiler/rustc_codegen_cranelift})
[Test] test::CodegenGCC
    targets: [x86_64-unknown-linux-gnu]
    - Set({test::compiler/rustc_codegen_gcc})
[Test] test::Crate
    targets: [aarch64-unknown-linux-gnu]
    - Set({test::library/alloc})
    - Set({test::library/alloctests})
    - Set({test::library/compiler-builtins/compiler-builtins})
    - Set({test::library/core})
    - Set({test::library/coretests})
    - Set({test::library/panic_abort})
    - Set({test::library/panic_unwind})
    - Set({test::library/proc_macro})
    - Set({test::library/rustc-std-workspace-core})
    - Set({test::library/std})
    - Set({test::library/std_detect})
    - Set({test::library/sysroot})
    - Set({test::library/test})
    - Set({test::library/unwind})
[Test] test::CrateLibrustc
    targets: [x86_64-unknown-linux-gnu]
    - Set({test::compiler})
    - Set({test::compiler/rustc})
    - Set({test::compiler/rustc_abi})
    - Set({test::compiler/rustc_arena})
    - Set({test::compiler/rustc_ast})
    - Set({test::compiler/rustc_ast_ir})
    - Set({test::compiler/rustc_ast_lowering})
    - Set({test::compiler/rustc_ast_passes})
    - Set({test::compiler/rustc_ast_pretty})
    - Set({test::compiler/rustc_attr_parsing})
    - Set({test::compiler/rustc_baked_icu_data})
    - Set({test::compiler/rustc_borrowck})
    - Set({test::compiler/rustc_builtin_macros})
    - Set({test::compiler/rustc_codegen_llvm})
    - Set({test::compiler/rustc_codegen_ssa})
    - Set({test::compiler/rustc_const_eval})
    - Set({test::compiler/rustc_data_structures})
    - Set({test::compiler/rustc_driver})
    - Set({test::compiler/rustc_driver_impl})
    - Set({test::compiler/rustc_error_codes})
    - Set({test::compiler/rustc_error_messages})
    - Set({test::compiler/rustc_errors})
    - Set({test::compiler/rustc_expand})
    - Set({test::compiler/rustc_feature})
    - Set({test::compiler/rustc_fluent_macro})
    - Set({test::compiler/rustc_fs_util})
    - Set({test::compiler/rustc_graphviz})
    - Set({test::compiler/rustc_hashes})
    - Set({test::compiler/rustc_hir})
    - Set({test::compiler/rustc_hir_analysis})
    - Set({test::compiler/rustc_hir_id})
    - Set({test::compiler/rustc_hir_pretty})
    - Set({test::compiler/rustc_hir_typeck})
    - Set({test::compiler/rustc_incremental})
    - Set({test::compiler/rustc_index})
    - Set({test::compiler/rustc_index_macros})
    - Set({test::compiler/rustc_infer})
    - Set({test::compiler/rustc_interface})
    - Set({test::compiler/rustc_lexer})
    - Set({test::compiler/rustc_lint})
    - Set({test::compiler/rustc_lint_defs})
    - Set({test::compiler/rustc_llvm})
    - Set({test::compiler/rustc_log})
    - Set({test::compiler/rustc_macros})
    - Set({test::compiler/rustc_metadata})
    - Set({test::compiler/rustc_middle})
    - Set({test::compiler/rustc_mir_build})
    - Set({test::compiler/rustc_mir_dataflow})
    - Set({test::compiler/rustc_mir_transform})
    - Set({test::compiler/rustc_monomorphize})
    - Set({test::compiler/rustc_next_trait_solver})
    - Set({test::compiler/rustc_parse})
    - Set({test::compiler/rustc_parse_format})
    - Set({test::compiler/rustc_passes})
    - Set({test::compiler/rustc_pattern_analysis})
    - Set({test::compiler/rustc_privacy})
    - Set({test::compiler/rustc_proc_macro})
    - Set({test::compiler/rustc_public})
    - Set({test::compiler/rustc_public_bridge})
    - Set({test::compiler/rustc_query_impl})
    - Set({test::compiler/rustc_query_system})
    - Set({test::compiler/rustc_resolve})
    - Set({test::compiler/rustc_sanitizers})
    - Set({test::compiler/rustc_serialize})
    - Set({test::compiler/rustc_session})
    - Set({test::compiler/rustc_span})
    - Set({test::compiler/rustc_symbol_mangling})
    - Set({test::compiler/rustc_target})
    - Set({test::compiler/rustc_thread_pool})
    - Set({test::compiler/rustc_trait_selection})
    - Set({test::compiler/rustc_traits})
    - Set({test::compiler/rustc_transmute})
    - Set({test::compiler/rustc_ty_utils})
    - Set({test::compiler/rustc_type_ir})
    - Set({test::compiler/rustc_type_ir_macros})
    - Set({test::compiler/rustc_windows_rc})
[Test] test::CrateRustdoc
    targets: [x86_64-unknown-linux-gnu]
    - Set({test::src/librustdoc, test::src/tools/rustdoc})
[Test] test::CrateRustdocJsonTypes
    targets: [x86_64-unknown-linux-gnu]
    - Set({test::src/rustdoc-json-types})
[Test] test::CrateBootstrap
    targets: [x86_64-unknown-linux-gnu]
    - Set({test::src/tools/coverage-dump})
    - Set({test::src/tools/jsondoclint})
    - Set({test::src/tools/replace-version-placeholder})
    - Set({test::tidyselftest})
[Test] test::RemoteTestClientTests
    targets: [x86_64-unknown-linux-gnu]
    - Set({test::src/tools/remote-test-client})
[Test] test::Linkcheck
    targets: [x86_64-unknown-linux-gnu]
    - Set({test::src/tools/linkchecker})
[Test] test::TierCheck
    targets: [x86_64-unknown-linux-gnu]
    - Set({test::src/tools/tier-check})
[Test] test::RustAnalyzer
    targets: [x86_64-unknown-linux-gnu]
    - Set({test::src/tools/rust-analyzer})
[Test] test::ErrorIndex
    targets: [x86_64-unknown-linux-gnu]
    - Set({test::error-index})
    - Set({test::src/tools/error_index_generator})
[Test] test::RustdocBook
    targets: [x86_64-unknown-linux-gnu]
    - Set({test::src/doc/rustdoc})
[Test] test::UnstableBook
    targets: [x86_64-unknown-linux-gnu]
    - Set({test::src/doc/unstable-book})
[Test] test::RustcBook
    targets: [x86_64-unknown-linux-gnu]
    - Set({test::src/doc/rustc})
[Test] test::RustdocJSStd
    targets: [x86_64-unknown-linux-gnu]
    - TestSuite(test::tests/rustdoc-js-std)
[Test] test::RustdocJSNotStd
    targets: [x86_64-unknown-linux-gnu]
    - TestSuite(test::tests/rustdoc-js)
[Test] test::RustdocTheme
    targets: [x86_64-unknown-linux-gnu]
    - Set({test::src/tools/rustdoc-themes})
[Test] test::RustdocUi
    targets: [x86_64-unknown-linux-gnu]
    - TestSuite(test::tests/rustdoc-ui)
[Test] test::RustdocJson
    targets: [x86_64-unknown-linux-gnu]
    - TestSuite(test::tests/rustdoc-json)
[Test] test::HtmlCheck
    targets: [x86_64-unknown-linux-gnu]
    - Set({test::src/tools/html-checker})
[Test] test::RustInstaller
    targets: [x86_64-unknown-linux-gnu]
    - Set({test::src/tools/rust-installer})
[Test] test::TestFloatParse
    targets: [x86_64-unknown-linux-gnu]
    - Set({test::src/tools/test-float-parse})
[Test] test::RunMake
    targets: [aarch64-unknown-linux-gnu]
    - TestSuite(test::tests/run-make)
[Test] test::RunMakeCargo
    targets: [aarch64-unknown-linux-gnu]
    - TestSuite(test::tests/run-make-cargo)
