src/bootstrap/src/core/builder/selectors/snapshots/x_test_tests_skip_coverage.snap
---
source: src/bootstrap/src/core/builder/selectors/tests.rs
expression: test tests --skip=coverage
---
[Test] test::AssemblyLlvm
    targets: [aarch64-unknown-linux-gnu]
    - TestSuite(test::tests/assembly-llvm)
[Test] test::BuildStd
    targets: [aarch64-unknown-linux-gnu]
    - TestSuite(test::tests/build-std)
[Test] test::CodegenLlvm
    targets: [aarch64-unknown-linux-gnu]
    - TestSuite(test::tests/codegen-llvm)
[Test] test::CodegenUnits
    targets: [aarch64-unknown-linux-gnu]
    - TestSuite(test::tests/codegen-units)
[Test] test::CoverageRunRustdoc
    targets: [x86_64-unknown-linux-gnu]
    - TestSuite(test::tests/coverage-run-rustdoc)
[Test] test::Crashes
    targets: [aarch64-unknown-linux-gnu]
    - TestSuite(test::tests/crashes)
[Test] test::Debuginfo
    targets: [aarch64-unknown-linux-gnu]
    - TestSuite(test::tests/debuginfo)
[Test] test::Incremental
    targets: [aarch64-unknown-linux-gnu]
    - TestSuite(test::tests/incremental)
[Test] test::MirOpt
    targets: [aarch64-unknown-linux-gnu]
    - TestSuite(test::tests/mir-opt)
[Test] test::Pretty
    targets: [x86_64-unknown-linux-gnu]
    - TestSuite(test::tests/pretty)
[Test] test::RunMake
    targets: [aarch64-unknown-linux-gnu]
    - TestSuite(test::tests/run-make)
[Test] test::RunMakeCargo
    targets: [aarch64-unknown-linux-gnu]
    - TestSuite(test::tests/run-make-cargo)
[Test] test::RustdocGUI
    targets: [x86_64-unknown-linux-gnu]
    - TestSuite(test::tests/rustdoc-gui)
[Test] test::RustdocHtml
    targets: [x86_64-unknown-linux-gnu]
    - TestSuite(test::tests/rustdoc-html)
[Test] test::RustdocJSNotStd
    targets: [x86_64-unknown-linux-gnu]
    - TestSuite(test::tests/rustdoc-js)
[Test] test::RustdocJSStd
    targets: [x86_64-unknown-linux-gnu]
    - TestSuite(test::tests/rustdoc-js-std)
[Test] test::RustdocJson
    targets: [x86_64-unknown-linux-gnu]
    - TestSuite(test::tests/rustdoc-json)
[Test] test::RustdocUi
    targets: [x86_64-unknown-linux-gnu]
    - TestSuite(test::tests/rustdoc-ui)
[Test] test::Ui
    targets: [aarch64-unknown-linux-gnu]
    - TestSuite(test::tests/ui)
[Test] test::UiFullDeps
    targets: [x86_64-unknown-linux-gnu]
    - TestSuite(test::tests/ui-fulldeps)
