src/bootstrap/src/core/builder/selectors/snapshots/x_test_tests_ui.snap
---
source: src/bootstrap/src/core/builder/selectors/tests.rs
expression: test tests/ui
---
[Test] test::Ui
    targets: [aarch64-unknown-linux-gnu]
    - TestSuite(test::tests/ui)
