src/bootstrap/src/core/builder/selectors/snapshots/x_test_tidy.snap
---
source: src/bootstrap/src/core/builder/selectors/tests.rs
expression: test tidy
---
[Test] test::Tidy
    targets: [x86_64-unknown-linux-gnu]
    - Set({test::src/tools/tidy})
