src/bootstrap/src/core/builder/selectors/snapshots/x_test_tidyselftest.snap
---
source: src/bootstrap/src/core/builder/selectors/tests.rs
expression: test tidyselftest
---
[Test] test::CrateBootstrap
    targets: [x86_64-unknown-linux-gnu]
    - Set({test::tidyselftest})
