src/bootstrap/src/core/builder/selectors/snapshots/x_test_ui.snap
---
source: src/bootstrap/src/core/builder/selectors/tests.rs
expression: test ui
---
[Test] test::Ui
    targets: [aarch64-unknown-linux-gnu]
    - TestSuite(test::tests/ui)
