src/bootstrap/src/core/builder/selectors/snapshots/x_vendor.snap
---
source: src/bootstrap/src/core/builder/selectors/tests.rs
expression: vendor
---
[Vendor] vendor::Vendor
    targets: [x86_64-unknown-linux-gnu]
    - Set({vendor::placeholder})
